--- a/hub/sensor/static/ng-templates/sensor-teaser.html
+++ b/hub/sensor/static/ng-templates/sensor-teaser.html
@@ -20,6 +20,9 @@
     <div layout="row" layout-align="space-between center">
         <div flex-xs="100">
             <sensor-teaser-chart data="sensor.history"></sensor-teaser-chart>
+            <textarea name="" id="" cols="30" rows="10">
+                {{ sensor.history }}
+            </textarea>
         </div>
     </div>
 </div>
