Default to hourly

--- a/hub/sensor/static/ng-templates/sensor-teaser.html
+++ b/hub/sensor/static/ng-templates/sensor-teaser.html
@@ -2,7 +2,7 @@
     <div layout="row" layout-align="space-between center">
         <div flex-xs="50">
             <h4>
-                <a ng-href="#/sensors/{{ sensor.id }}/">{{ sensor.name }}</a>
+                <a ng-href="/sensors/{{ sensor.id }}/">{{ sensor.name }}</a>
             </h4>
         </div>
 
